--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,14 @@
                 <div class="card">
                     <img class="card-img-top" src="{{ url_for('static', filename='assets/python.jpeg') }}" alt="Python Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What should <mark>Python Developers learn</mark>?</h5>
+                    <h5 class="card-title">What should <mark>Student Developers learn</mark>?</h5>
                     <p class="card-text">
                         <ol>
-                            <li>Python 3.9 is used for most of our PBL.</li>
+                            <li>Python 3.9 is used for most of our backend PBL. HTML, CSS, JavaScript will be used in frontend</li>
                             <li>Visuals Studio Code (VS Code) is the primary editor, Interactive Development Environment (IDE).</li>
-                            <li>GitHub.  Learning to master managing change, branches, pull requests, and more.</li>
-                            <li>Development DevOps. Python programmers should have a passion for managing the environment and learning automation (Git, Python Packages, Docker).</li>
-                            <li>API and Microservice using Flask.  Mastering creating and consuming RESTful APIs</li>
+                            <li>GitHub.  Managing and sharing code change, branches, pull requests, issues, and more will be through GitHub.</li>
+                            <li>DevOps. Python programmers should have a passion for managing the environment and learning automation (Git, Linux, Bash, Python Packages, Docker).</li>
+                            <li>API and Microservice using Flask.  Mastering development techniques in creating and consuming RESTful APIs</li>
                         </ol>
                     </p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
