blueprint projects directory

--- a/templates/stub.html
+++ b/templates/stub.html
@@ -7,7 +7,7 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here ->
-    <p>Tech Talk 1 - Body Stub</p>
+    <p>Body of Stubby</p>
 {% endblock %}
 
 <!- This is turning off birds background from base.html -->
