--- a/templates/stub.html
+++ b/templates/stub.html
@@ -6,8 +6,10 @@
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
-    <!- Try building a new body here ->
-    <p>Body of Stubby</p>
+    <!- Try building a new body here, bootstrap is a wise choice ->
+    <div class="px-5 py-5 mx-auto">
+        <h1 class="text-primary"><strong>Stubby Body</strong></h1>
+    </div>
 {% endblock %}
 
 <!- This is turning off birds background from base.html -->
