--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base.html" %}
-{% set project = "Flask / Python" %}
+{% set project = "Home" %}
 
 {% block body %}
     <!-- Start of body content specific to page -->
