--- a/templates/table.html
+++ b/templates/table.html
@@ -11,41 +11,90 @@
         <table id="demo" class="table">
             <thead>
                 <tr>
-                    <th>Last Name</th>
-                    <th>First Name</th>
-                    <th>Email</th>
-                    <th>Due</th>
-                    <th>Web Site</th>
+                    <th>Make</th>
+                    <th>Model</th>
+                    <th>Year</th>
+                    <th>Color</th>
+                    <th>Price</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Smith</td>
-                    <td>John</td>
-                    <td>jsmith@gmail.com</td>
-                    <td>$50.00</td>
-                    <td>http://www.jsmith.com</td>
+                    <td>Ford</td>
+                    <td>Mustang</td>
+                    <td>2022</td>
+                    <td>Red</td>
+                    <td>$35,000</td>
                 </tr>
                 <tr>
-                    <td>Bach</td>
-                    <td>Frank</td>
-                    <td>fbach@yahoo.com</td>
-                    <td>$50.00</td>
-                    <td>http://www.frank.com</td>
+                    <td>Toyota</td>
+                    <td>Camry</td>
+                    <td>2022</td>
+                    <td>Silver</td>
+                    <td>$25,000</td>
                 </tr>
                 <tr>
-                    <td>Doe</td>
-                    <td>Jason</td>
-                    <td>jdoe@hotmail.com</td>
-                    <td>$100.00</td>
-                    <td>http://www.jdoe.com</td>
+                    <td>Tesla</td>
+                    <td>Model S</td>
+                    <td>2022</td>
+                    <td>White</td>
+                    <td>$80,000</td>
                 </tr>
                 <tr>
-                    <td>Conway</td>
-                    <td>Tim</td>
-                    <td>tconway@earthlink.net</td>
-                    <td>$50.00</td>
-                    <td>http://www.timconway.com</td>
+                    <td>Cadillac</td>
+                    <td>Broughan</td>
+                    <td>1969</td>
+                    <td>Black</td>
+                    <td>$10,000</td>
+                </tr>
+                <tr>
+                    <td>Ford</td>
+                    <td>F-350</td>
+                    <td>1997</td>
+                    <td>Green</td>
+                    <td>$15,000</td>
+                </tr>
+                <tr>
+                    <td>Ford</td>
+                    <td>Excursionn</td>
+                    <td>2003</td>
+                    <td>Green</td>
+                    <td>$25,000</td>
+                </tr>
+                <tr>
+                    <td>Ford</td>
+                    <td>Ranger</td>
+                    <td>2012</td>
+                    <td>Red</td>
+                    <td>$8,000</td>
+                </tr>
+                <tr>
+                    <td>Kuboto</td>
+                    <td>L3301 Tractor</td>
+                    <td>2015</td>
+                    <td>Orange</td>
+                    <td>$12,000</td>
+                </tr>
+                <tr>
+                    <td>Ford</td>
+                    <td>Fusion Energi</td>
+                    <td>2015</td>
+                    <td>Green</td>
+                    <td>$15,000</td>
+                </tr>
+                <tr>
+                    <td>Acura</td>
+                    <td>XL</td>
+                    <td>2006</td>
+                    <td>Grey</td>
+                    <td>$10,000</td>
+                </tr>
+                <tr>
+                    <td>Ford</td>
+                    <td>F150 Lightning</td>
+                    <td>2023</td>
+                    <td>Grey</td>
+                    <td>$70,000</td>
                 </tr>
             </tbody>
         </table>
