--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@
     <div class="index">
         <div class="center-block" style="margin: 2% 10% 10%; font-family: gilroy,serif;">
             <div class="col-12" style="text-align: center;">
-                <h1><strong>Something Went Wrong</strong></h1>
+                <h1><strong>Something Went Wrong, 404 Not Found</strong></h1>
             </div>
 
             <div class="jumbotron jumbotron-fluid" style="text-align: center; ">
