add rgb/image to menu

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -19,6 +19,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <li><a class="dropdown-item" href={{ url_for('table') }}>Cars Table</a></li>
                     <li><a class="dropdown-item" href={{ url_for('algorithm.fibonacci') }}>Fibonacci</a></li>
                     <li><a class="dropdown-item" href={{ url_for('algorithm.palindrome') }}>Palindrome</a></li>
+                    <li><a class="dropdown-item" href={{ url_for('algorithm.image') }}>Image</a></li>
                     <li><a class="dropdown-item" href={{ url_for('recipe.viewer') }}>Recipes</a></li>
                 </ul>
             </div>
