fix stay lines in tables

--- a/templates/table.html
+++ b/templates/table.html
@@ -9,7 +9,7 @@
         <span class="fs-4">Cars Table</span>
     </header>
     <div class="row mx-3 mb-4 bg-primary rounded-3 align-items-md-stretch">
-        <table id="demo" class="table mx-3" text-light>
+        <table id="demo" class="table" text-light>
             <thead>
                 <tr>
                     <th>Make</th>
