--- a/views/algorithm/templates/algorithm/fibonacci.html
+++ b/views/algorithm/templates/algorithm/fibonacci.html
@@ -19,7 +19,7 @@
 
             <h3></h3>
             <!-- Number, List table -->
-            <table class="table mx-3">
+            <table class="table">
                 <thead>
                 <tr>
                     <th scope="col">Fibonacci: {{fibonacci.series}}</th>
@@ -37,7 +37,7 @@
 
         <div class="row mx-3 mb-4 bg-primary rounded-3 align-items-md-stretch">
             <!-- Series -->
-            <table class="table mx-3">
+            <table class="table">
                 <thead>
                 <tr>
                     <th scope="col">Fibonacci {{fibonacci.series}} series build up to {{fibonacci.number}}</th>
