--- a/views/algorithm/templates/algorithm/palindrome.html
+++ b/views/algorithm/templates/algorithm/palindrome.html
@@ -17,7 +17,7 @@
 
             <h3></h3>
             <!-- Number, List table -->
-            <table class="table mx-3">
+            <table class="table">
                 <thead>
                 <tr>
                     <th scope="col">Tests</th>
@@ -35,7 +35,7 @@
 
         <div class="row mx-3 mb-4 bg-primary rounded-3 align-items-md-stretch">
             <!-- Series -->
-            <table class="table mx-3">
+            <table class="table">
                 <thead>
                 <tr>
                     <th scope="col">The Palindrome testing series for: "{{palindrome.candidate}}".</th>
@@ -44,7 +44,7 @@
                 <tbody class="text-light">
                 {% for test in palindrome.analysis %}
                     <tr>
-                        <td>{Test#={{test.test}} Front={{test.front}} Back={{test.back}} Result={{test.result}}</td>
+                        <td>Test#={{test.test}} Front={{test.front}} Back={{test.back}} Result={{test.result}}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
