--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -26,16 +26,19 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-     <!-- Bootstrap JavaScript -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-     <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+    <!-- Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+
+    {% block head %}
+    {% endblock %}
       
     <style>
         .navbar {
             position: static;
             z-index: 9999;
         }
-        #xbody {
+        #body_background {
             position: fixed;
             top: 0;
             left: 0;
@@ -52,7 +55,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 </head>
 
 <body>
-    <div id="xbody"></div>
+    <div id="body_background"></div>
+
     {% include "layouts/navbar.html" %}
 
     {% block body %}
@@ -65,7 +69,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     <script src="{{ url_for('static', filename='js/vanta.birds.min.js') }}"></script>
     <script>
         VANTA.BIRDS({
-            el: "#xbody",
+            el: "#body_background",
             mouseControls: true,
             touchControls: true,
             gyroControls: false,
