--- a/views/recipes/templates/recipe/recipes.html
+++ b/views/recipes/templates/recipe/recipes.html
@@ -8,84 +8,11 @@
 {% endblock %}
 
 {% block style %}
-    :root {
-        --bg-color:#fbfbf9;
-        --text:#1a1a18;
-        --accent:#b4c6df;
-        --accent-text:#0f0a0a;
-    }
-
-    /* scrollbar */
-    ::-webkit-scrollbar {
-        width:10px;
-        height:10px;
-    }
-
-    ::-webkit-scrollbar-thumb {
-        background:var(--accent);
-        border:4px solid var(--bg-color);
-        border-width:0 4px;
-    }
-
-    ::-webkit-scrollbar-track-piece {
-        background:var(--box-two);
-        border:4px solid var(--bg-color);
-        border-width:0 4px;
-    }
-
-
-    /* filter button */
-    a,.button {
-        transition:0.2s ease-in;
-        -webkit-transition:0.2s ease-in;
-        -moz-transition:0.2s ease-in;
-    }
-
-    b,strong {color:#444;}
-
-    a:hover {
-        color:#444;
-        text-decoration:none;
-    }
-    /* header */
-    header {
-        width:60vw;
-        margin:90px auto 30px;
-    }
-
-    header > * {display:inline-block;}
-
-    /* page title */
-    header h1 {
-        font:36px/45px "Alata";
-        color:var(--accent);
-        text-decoration:none;
-        margin:0;
-        text-transform:uppercase;
-        letter-spacing: 8px;
-    }
-
-    
-
-    /* language toggle */
-    .toggle {
-        background-color: var(--accent);
-        border: none;
-        outline: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        position: fixed;
-        margin: 4px 2px;
-    }
 
     /* language toggle effect */
-    .toggle:hover {
-        background-color: #ededed;
-        color: var(--accent);
+    .toggle:hover, button:hover {
+        background-color: blue;
+        color: whitesmoke;
     }
 
     /* position for filter buttons */
@@ -140,27 +67,6 @@
         border-bottom:1px solid #a4afc1;
     }
 
-    /* scroll to top */
-    #scrollToTop:link,
-    #scrollToTop:visited {
-        display: none;
-        position: fixed;
-        right: 50px;
-        bottom: 50px;
-        color: var(--text);
-        z-index: 100;
-    }
-
-    #scrollToTop:hover { color: #b4c6df; }
-
-    #scrollToTopSymbol {
-        position: fixed;
-        right: 50px;
-        bottom: 50px;
-        opacity: 0.5;
-        color: #b4c6df;
-        z-index: 20;
-    }
 {% endblock %}
 
 {% block body %}
