Roles and colors

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -54,8 +54,10 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                         <ul class="dropdown-menu dropdown-menu-dark">
                             <li>
                                 <div class="dropdown-item">
-                                    <p style="margin-bottom:2px"><strong>ROLE:</strong></p>
-                                    <p style="font-size:0.75em;margin:1px">{{current_user.role}}</p>
+                                    <p style="margin-bottom:2px"><strong>ID:</strong> {{current_user.uid}} </p>
+                                    
+                                    <p style="margin-bottom:2px"><strong>ROLE:</strong> {{current_user.role}} </p>
+                                    
                                 </div>
                             </li>
                             <li><a class="dropdown-item active" href="{{ url_for('logout') }}">Logout</a></li>
