--- a/templates/login.html
+++ b/templates/login.html
@@ -5,12 +5,12 @@
     <!-- Start of body content specific to page -->
     <div class="px-5 py-5 mx-auto">
         <div class="container py-4">
-            <header class="pb-3 mb-4 border-bottom border-primary text-dark">
+            <header class="pb-3 mb-4 border-bottom border-primary text-light">
                 <span class="fs-4">Login Page</span>
             </header>
         </div>
     
-        <div class="container py-4 text-light bg-success">
+        <div class="container py-4 text-light bg-primary">
     
             <div class="container bg-secondary py-4">
                 <div class="p-5 mb-4 bg-light text-dark rounded-3">
